--- a/css/style.css
+++ b/css/style.css
@@ -1626,10 +1626,19 @@ body {
 #schema-main div{
 
 }
-#schema-main {
-    height: 300px;
+
+#parameter-grid {
+    height: 200px;
     margin-right: 10px;
     margin-top: 30px;
+    width:400px;
+
+}
+#header-grid {
+    height: 200px;
+    margin-right: 10px;
+    margin-top: 30px;
+    width:400px;
 
 }
 html, body, #container{
