--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,9 @@ body {
 }
 
 #header {
-	background:    #333333 -moz-linear-gradient(center top, #3F3F3F 0%, #222222 100%);
+	background:    #333333 -moz-linear-gradient(li, #3F3F3F 0%, #222222 100%);
+	background:    #333333 -webkit-linear-gradient(li, #3F3F3F 0%, #222222 100%);
+	background:    #333333 linear-gradient(li, #3F3F3F 0%, #222222 100%);
 	border-bottom: 1px solid #555555;
 	box-shadow:    0 1px 0 #333333;
 }
@@ -107,8 +109,9 @@ body {
 }
 
 #sidebar > ul > li.active {
-	/*background: #3A3A3A -moz-linear-gradient(center top, #333333 0%, #3F3F3F 100%);*/
-	background: #3A3A3A linear-gradient(to bottom center, #333333, #3F3F3F);
+	background: #3A3A3A -moz-linear-gradient(center top, #333333 0%, #3F3F3F 100%);
+	background: #3A3A3A linear-gradient(top, #333333, #3F3F3F);
+	background: #3A3A3A -webkit-linear-gradient(top, #333333, #3F3F3F);
 }
 
 #sidebar > ul > li.open.submenu > a {
@@ -143,12 +146,16 @@ body {
 }
 
 .dropdown-menu li a:hover, .dropdown-menu .active a, .dropdown-menu .active a:hover {
-	background: #444444 -moz-linear-gradient(center top, #555555 0%, #222222 100%);
+	background: #444444 -moz-linear-gradient(top, #555555 0%, #222222 100%);
+	background: #444444 -webkit-linear-gradient(top, #555555 0%, #222222 100%);
+	background: #444444 linear-gradient(top, #555555 0%, #222222 100%);
 	color:      #EEEEEE;
 }
 
 #sidebar > a {
-	background-image: -moz-linear-gradient(center top, #464646 0%, #404040 100%);
+	background-image: -moz-linear-gradient(top, #464646 0%, #404040 100%);
+	background-image: -webkit-linear-gradient(top, #464646 0%, #404040 100%);
+	background-image: linear-gradient(top, #464646 0%, #404040 100%);
 	border-bottom:    1px solid #6E6E6E;
 }
 
@@ -363,7 +370,7 @@ a:hover {
 }
 
 #content-header {
-	background-image:       -moz-linear-gradient(center top, #FFFFFF 0%, #EEEEEE 100%);
+	background-image:       -moz-linear-gradient(top, #FFFFFF 0%, #EEEEEE 100%);
 	border-top-left-radius: 8px;
 	height:                 80px;
 	margin-top:             -38px;
@@ -499,7 +506,7 @@ a:hover {
 }
 
 .stat-boxes li, .quick-actions li, .quick-actions-horizontal li {
-	background:    #F6F6F6 -moz-linear-gradient(center top, #F9F9F9 0%, #EDEDED 100%);
+	background:    #F6F6F6 -moz-linear-gradient(top, #F9F9F9 0%, #EDEDED 100%);
 	border:        1px solid #D5D5D5;
 	border-radius: 4px 4px 4px 4px;
 	box-shadow:    0 1px 0 0 #FFFFFF inset, 0 1px 0 rgba(255, 255, 255, 0.4);
@@ -729,11 +736,11 @@ a:hover {
 }
 
 .stat-boxes li:hover, .quick-actions li:hover, .quick-actions-horizontal li:hover {
-	background: #FCFCFC -moz-linear-gradient(center top, #FCFCFC 0%, #F1F1F1 100%);
+	background: #FCFCFC -moz-linear-gradient(top, #FCFCFC 0%, #F1F1F1 100%);
 }
 
 .quick-actions li:active, .quick-actions-horizontal li:active {
-	background-image: -moz-linear-gradient(center top, #EEEEEE 0%, #F4F4F4 100%);
+	background-image: -moz-linear-gradient(top, #EEEEEE 0%, #F4F4F4 100%);
 	box-shadow:       0 1px 4px 0 rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4);
 }
 
@@ -830,7 +837,7 @@ a:hover {
 }
 
 .widget-title, .modal-header, .table th, div.dataTables_wrapper .ui-widget-header {
-	background:    #EFEFEF -moz-linear-gradient(center top, #FDFDFD 0%, #EAEAEA 100%);
+	background:    #EFEFEF -moz-linear-gradient(top, #FDFDFD 0%, #EAEAEA 100%);
 	border-bottom: 1px solid #CDCDCD;
 }
 
@@ -1384,7 +1391,7 @@ span.icon .checker {
 }
 
 .dataTables_paginate .ui-button, .pagination.alternate li a {
-	background:   #F5F5F5 -moz-linear-gradient(center top, #FFFFFF, #E6E6E6);
+	background:   #F5F5F5 -moz-linear-gradient(top, #FFFFFF, #E6E6E6);
 	border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 	border-style: solid;
 	border-width: 1px;
@@ -1397,7 +1404,7 @@ span.icon .checker {
 }
 
 .dataTables_paginate .ui-button:hover, .pagination.alternate li a:hover {
-	background:  #E8E8E8 -moz-linear-gradient(center top, #F0F0F0, #DADADA);
+	background:  #E8E8E8 -moz-linear-gradient(top, #F0F0F0, #DADADA);
 	color:       #222222;
 	cursor:      pointer;
 	text-shadow: 0 1px 0 #FFFFFF;
@@ -1416,12 +1423,12 @@ span.icon .checker {
 }
 
 .dataTables_paginate .ui-state-disabled:hover, .fc-state-disabled:hover, .pagination.alternate li.disabled a:hover {
-	background: #F5F5F5 -moz-linear-gradient(center top, #FFFFFF, #E6E6E6);
+	background: #F5F5F5 -moz-linear-gradient(top, #FFFFFF, #E6E6E6);
 	cursor:     default !important;
 }
 
 .dataTables_paginate span .ui-state-disabled, .pagination.alternate li.active a {
-	background: #414141 -moz-linear-gradient(center top, #555555, #222222) !important;
+	background: #414141 -moz-linear-gradient(top, #555555, #222222) !important;
 	color:      #FFFFFF !important;
 	cursor:     default !important;
 }
@@ -1547,7 +1554,7 @@ div.dataTables_wrapper .ui-widget-header {
 }
 
 .notify-ui li {
-	background-image: -moz-linear-gradient(center top, #EEEEEE, #DDDDDD);
+	background-image: -moz-linear-gradient(top, #EEEEEE, #DDDDDD);
 	border:           1px solid #DDDDDD;
 	margin-bottom:    5px;
 	padding:          5px 10px;
@@ -1851,7 +1858,7 @@ body {
 }
 
 #header {
-	background:    #333333 -moz-linear-gradient(center top, #3F3F3F 0%, #222222 100%);
+	background:    #333333 -moz-linear-gradient(top, #3F3F3F 0%, #222222 100%);
 	border-bottom: 1px solid #555555;
 	box-shadow:    0 1px 0 #333333;
 }
@@ -1876,7 +1883,7 @@ body {
 }
 
 #sidebar > ul > li.active {
-	background: #3A3A3A -moz-linear-gradient(center top, #333333 0%, #3F3F3F 100%);
+	background: #3A3A3A -moz-linear-gradient(top, #333333 0%, #3F3F3F 100%);
 }
 
 #sidebar > ul > li.open.submenu > a {
@@ -1911,12 +1918,12 @@ body {
 }
 
 .dropdown-menu li a:hover, .dropdown-menu .active a, .dropdown-menu .active a:hover {
-	background: #444444 -moz-linear-gradient(center top, #555555 0%, #222222 100%);
+	background: #444444 -moz-linear-gradient(top, #555555 0%, #222222 100%);
 	color:      #EEEEEE;
 }
 
 #sidebar > a {
-	background-image: -moz-linear-gradient(center top, #464646 0%, #404040 100%);
+	background-image: -moz-linear-gradient(top, #464646 0%, #404040 100%);
 	border-bottom:    1px solid #6E6E6E;
 }
 
@@ -2050,15 +2057,15 @@ h5.text-info {
 }
 
 #sidebar > ul > li.active:not(:first-child) {
-	border-top:    none;
-	border-bottom: none;
+	border-top:     none;
+	border-bottom:  none;
 	padding-bottom: 1px;
 }
 
 #sidebar > ul > li:first-child.active {
-	border-top: 0 solid #4e4e4e !important;
+	border-bottom: 1px solid #393939;
 }
 
-.ngCell div{
-    height:100%;
+.ngCell div {
+	height: 100%;
 }
