--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -22,8 +22,8 @@
   display: none;
 }
 
-.main_content {
-  margin-top: 80px;
+.main-content {
+  margin-top: 10px;
   margin-left: 25px;
   margin-right: 25px;
 }
